# avalanchepy

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yaml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
avalanchepy/: __init__.py  collectors.py  interface.py  sampler.py  updaters.py
docs/: index.md  modules.md
examples/: gaussian.ipynb
search/: search_index.json
site/: index.html  objects.inv
site/modules/: index.html
site/search/: search_index.json
tests/: test_foo.py
